--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
         
+      - name: Collect Workflow Telemetry
+        uses: thundra-io/workflow-telemetry-action@v1
+        
       - name: Run Script
         run: |
           chmod +x AppImage_FLINT_Build.sh
